kubernetes/wordpress/helm/addl/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: my-wordpress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # cert-manager.io/cluster-issuer: selfsigned
spec:
  rules:
    - host: wordpress.local.127.0.0.1.sslip.io #select own
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  wordpress
                port:
                  number: 80
  tls: []
